[project]
name = "pf-agent"
version = "0.1.0"
description = "pf-agent is an AI agent module that acts as a code reviewer, it reviews code and points out the bugs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.26.8",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
[tool.ruff]
line-length = 88
[tool.ruff.lint]
select = ["E", "F", "B", "UP", "I"]
[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[console.scripts]
pf-agent = "pf_agent.cli:main"

[project.scripts]
pf-agent = "pf_agent.cli: main"
